@@ -15,7 +15,7 @@ Multifunctional Discord Bot
 * Coming Soon™
 
 ## Build with
-* [Java 12](https://openjdk.java.net/projects/jdk/12/) - Programming Language
+* [Java 11](https://openjdk.java.net/projects/jdk/11/) - Programming Language
 * [JDA 3.8.3_460](https://github.com/DV8FromTheWorld/JDA) - Java Wrapper for Discord
 * [JDA-Utilities 2.1.5](https://github.com/JDA-Applications/JDA-Utilities) - JDA Extension
 * [Maven](https://maven.apache.org/) - Dependency Management
