@@ -9,9 +9,9 @@
     <version>4.0.0</version>
 
     <properties>
-        <!-- Set java compiler to version 12. -->
-        <maven.compiler.source>12</maven.compiler.source>
-        <maven.compiler.target>12</maven.compiler.target>
+        <!-- Set java compiler to version 11. -->
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <repositories>
